# alter

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: cmds.rs  config.rs  git.rs  git_ops.rs  main.rs  ui.rs
src/cmds/: del.rs  list.rs  new.rs  use_profile.rs
