[package]
name = "alter"
version = "0.2.0"
edition = "2024"
authors = ["AmaseCocoa <cocoa@amase.cc>"]
description = 'An "Alternative" account switcher.'
license = "MIT"
repository = "https://github.com/AmaseCocoa/alter"

[dependencies]
dialoguer = "0.12.0"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
uuid = { version = "1", features = ["serde"] }
