[package]
name = "alter"
version = "0.2.0"
edition = "2024"
authors = ["AmaseCocoa <cocoa@amase.cc>"]
description = 'Switch git username and email and credential in one-line.'
license = "MIT"
repository = "https://github.com/AmaseCocoa/alter"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
gix-config = { version = "0.48.0", features = ["serde"] }
gix-object = "0.52.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
uuid = { version = "1", features = ["v4", "serde"] }
